# quorum

./: .bazelrc  .gitignore  BUILD.bazel  CLAUDE.md  MODULE.bazel  PLAN.md  README.md  USAGE.md  demo_market_fetch.py  pyproject.toml  pytest.ini  run_tests.py
.claude/: settings.json
docs/: ELVES_SETUP.md  constitution.md
pelosi/: __init__.py  main.py
pelosi/config/: __init__.py  settings.py
pelosi/embedding_agent/: __init__.py  embedding_parser.py  llm_client.py  market_fetcher.py
projects/market/: CLAUDE.md  PLAN.md  README.md  USAGE.md  demo_market_fetch.py  pyproject.toml  run_tests.py
projects/market/docs/: ELVES_SETUP.md
projects/market/market/: __init__.py
projects/market/market/config/: __init__.py  settings.py
projects/market/market/legacy/: __init__.py  main.py
projects/market/market/legacy/embedding_agent/: __init__.py  llm_client.py  market_fetcher.py
projects/market/tests/: __init__.py  conftest.py  test_basic.py
projects/market/tests/integration/: test_pipeline.py
projects/market/tests/unit/: test_config.py  test_core.py  test_invariants.py  test_llm_client.py
projects/quorum/: BUILD.bazel  CLAUDE.md  MODULE.bazel  PLAN.md  README.md  USAGE.md  demo_market_fetch.py  pyproject.toml  run_tests.py
projects/quorum/docs/: ELVES_SETUP.md
projects/quorum/experiments/: README.md  TOY_v1_SCHELLING.md  TOY_v2_PDNCA.md  pyproject.toml
projects/quorum/experiments/tests/integration/: test_llm_policy_smoke.py  test_main.py  test_runner.py
projects/quorum/experiments/tests/unit/: test_actions.py  test_grid.py  test_metrics.py  test_policy.py  test_prompts.py
projects/quorum/experiments/toy_v1/: __init__.py  _llm_policy.py  actions.py  grid.py  main.py  metrics.py  policy.py  prompts.py  runner.py
projects/quorum/quorum/: __init__.py
projects/quorum/quorum/config/: __init__.py
projects/quorum/quorum/legacy/: __init__.py  main.py
projects/quorum/tests/: conftest.py
projects/quorum/tests/integration/: test_pipeline.py
projects/quorum/tests/unit/: test_config.py  test_core.py  test_invariants.py
quorum/config/: settings.py
quorum/legacy/embedding_agent/: __init__.py  embedding_parser.py  market_fetcher.py
quorum/scoring/: __init__.py  abnormal_return.py
tests/: conftest.py  test_basic.py
tests/unit/: test_config.py  test_core.py  test_llm_client.py
