# Workspace root for the quorum polyglot monorepo.
#
# This file declares the uv workspace and nothing else — no runtime deps,
# no buildable package at the root. Each project under ``projects/<name>/``
# has its own ``pyproject.toml`` with its own ``[project].dependencies`` and
# is fully isolated from its siblings.
#
# uv resolves all Python members into a single shared ``uv.lock`` at this
# root, so any version conflict between members surfaces at lock time as a
# deliberate decision rather than a silent drift. Non-Python projects can
# live alongside (``projects/<name>/Cargo.toml``, ``go.mod``,
# ``package.json``) — uv only governs the Python ones.
#
# Usage:
#   uv sync --all-extras                           # install every member + dev extras
#   uv sync --package quorum --extra dev           # just one member
#   uv run --package quorum pytest -q              # run a command against a member
#   cd projects/quorum && uv run pytest -q         # equivalent, cwd-relative

[tool.uv.workspace]
members = [
    "projects/*",                       # top-level Python projects (currently: market)
    "projects/quorum/experiments",      # nested under the bazel quorum project
]
# Non-Python projects (Bazel, Rust, Go, TS, …) live under projects/ too.
# List each here so uv skips it instead of looking for a pyproject.toml.
exclude = [
    "projects/quorum",   # bazel workspace; no pyproject.toml at this level
]
