[project]
name = "market"
version = "0.2.0"
description = "Real-time news-impact market state estimator. See PLAN.md for the system design."
authors = [
    {name = "Richard Bao"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<4.0"
dependencies = [
    # LLM + market data — needed by market.legacy and the refined event-extraction stage (PLAN.md §4.4).
    "openai>=1.88.0,<2.0.0",
    "yfinance>=0.2.65,<0.3.0",
    # Storage + math for Slice 0 (PLAN.md §8, §11).
    "duckdb>=1.1.0,<2.0.0",
    "numpy>=1.26.0,<3.0.0",
    "pandas>=2.2.0,<3.0.0",
    "pydantic>=2.7.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-mock>=3.14.1",
    "pytest-cov>=6.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["market"]

# Pytest config lives with the project so it's discovered whether you run
# pytest from this directory or from the workspace root with an explicit
# path (`uv run --package market pytest projects/market`).
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--cov=market",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "slow: marks tests as slow tests that may take longer to run",
    "api: marks tests as requiring API access (network / OPENAI_API_KEY)",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# Removed dependencies (and why):
#  - flask          : never imported; web API is deferred to M6+.
#  - sqlalchemy     : never imported; v0 storage is DuckDB.
#  - aiohttp        : only used by the mock-news scraper in the legacy market_fetcher,
#                    which was removed (review M3 — was injecting hardcoded fake
#                    articles into the LLM prompt, violating PLAN.md I5).
#  - beautifulsoup4 : same — only the deleted mock-news code imported it.
#
# Dependency tool: this project uses `uv` (https://docs.astral.sh/uv/).
# From the workspace root:
#   uv sync --package market --extra dev      # install this member + dev deps
#   uv run --package market pytest projects/market   # run this member's tests
# From this directory:
#   uv sync --extra dev
#   uv run pytest
