[project]
name = "quorum-toy-v1"
version = "0.1.0"
description = "Toy v1 of the quorum architecture — LLM Schelling on a grid, one batched forward pass per tick."
authors = [
    {name = "Richard Bao"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<4.0"

# Core deps are deliberately tiny: substrate + tests run on numpy alone.
# The real LLM is in the [llm] extra so unit tests do not need torch.
dependencies = [
    "numpy>=1.26.0,<3.0.0",
]

[project.optional-dependencies]
# Unit + integration tests run without torch by using MockPolicy.
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=6.0.0",
]
# Real LLM backend for the runner / smoke test. Optional on purpose.
llm = [
    "torch>=2.4.0,<3.0.0",
    "transformers>=4.50.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["toy_v1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
]
markers = [
    "smoke: opt-in smoke test that loads a real LLM (skipped by default)",
]

# This pyproject is a NESTED MEMBER of the root uv workspace (see the
# root pyproject.toml `[tool.uv.workspace].members`). The shared `uv.lock`
# lives at the repo root. Run commands either from here or from the root:
#
#   cd projects/quorum/experiments
#   uv sync --extra dev
#   uv run pytest -q
#   uv sync --extra dev --extra llm
#   uv run python -m toy_v1.main --ticks 40 --seed 42
#
# This is a tactical choice. The production answer for `projects/quorum/` is
# bazel (via the root MODULE.bazel). When Slice 0 lands, the experiments
# folder migrates into the bazel build graph.
